# tf_kaldi_io

./: CHANGES.txt  CMakeLists.txt  LICENSE.txt  MANIFEST.in  README.md  requirements.txt  setup.py
ops/: kaldi-io.cmake  kaldi_reader_dataset_op.cc
test/: test_tf_kaldi_dataset.py  test_tf_kaldi_io.py
test/data/: feats.ark  global.cmvn  labels.ark  vector.ark
tf_kaldi_io/: __init__.py  tf_kaldi_dataset.py  tf_kaldi_io.py
